[project]
name = "parallel-advisor"
version = "0.1.0"
description = "LLM-based parallelization strategy advisor"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Josh Schell", email = "josh@schell.me" }
]

dependencies = [
    "verifiers>=0.1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
asyncio_mode = "auto"
